Improve code quality: Use List.of() instead of Arrays.asList() for immutable lists
Co-authored-by: candogusyilmaz <33032619+candogusyilmaz@users.noreply.github.com>